; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_clk_unregister_loop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/x86/extr_clk-pmc-atom.c_plt_clk_unregister_loop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_plt_data = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk_plt_data*, i32)* @plt_clk_unregister_loop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @plt_clk_unregister_loop(%struct.clk_plt_data* %0, i32 %1) #0 {
  %3 = alloca %struct.clk_plt_data*, align 8
  %4 = alloca i32, align 4
  store %struct.clk_plt_data* %0, %struct.clk_plt_data** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i32, i32* %4, align 4
  %7 = add i32 %6, -1
  store i32 %7, i32* %4, align 4
  %8 = icmp ne i32 %6, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %5
  %10 = load %struct.clk_plt_data*, %struct.clk_plt_data** %3, align 8
  %11 = getelementptr inbounds %struct.clk_plt_data, %struct.clk_plt_data* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @plt_clk_unregister(i32 %16)
  br label %5

18:                                               ; preds = %5
  ret void
}

declare dso_local i32 @plt_clk_unregister(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
